fix(android): recognise both apex and www host so shell stops kicking to browser
The site redirects malesan.my.id to www.malesan.my.id, but the shell only
trusted the apex host. Every navigation after the redirect was treated as
foreign and opened in the system browser, which also killed the native
login bridge since the WebMessage listener was bound to a single origin.

Changes:
- BASE_URL now points to www.malesan.my.id (the canonical host)
- Both apex and www are accepted in shouldOverrideUrlLoading, isTrustedAppUri,
  the WebMessage bridge allowedOrigins, and the CORS echo for native clip fetch
- AndroidManifest deep links split into two intent-filters (one per host) to
  satisfy IntentFilterUniqueDataAttributes lint
- Unit tests cover both hosts plus near-miss impostor domains
- Version bumped to 2.0.1 (versionCode 4)